--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "main": "server.js",
     "type": "module",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Caroline Sampaio, Glenelly Karla, Rafael Albuquerque",
     "license": "ISC",
     "dependencies": {
-      "express": "^4.18.2",
-      "pg": "^8.11.0",
-      "pg-hstore": "^2.3.4",
-      "sequelize": "^6.32.0"
+        "bcrypt": "^5.1.1",
+        "express": "^4.18.2",
+        "pg": "^8.11.0",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.32.0"
     }
-  }
-  
+}
