--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.1",
-        "express": "^4.18.2",
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
         "pg": "^8.11.0",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.32.0"
