--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "express": "^4.18.2",
         "pg": "^8.11.0",
         "pg-hstore": "^2.3.4",
-        "sequelize": "^6.32.0"
+        "sequelize": "^6.32.0",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     }
 }
